// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots  InputField Default 1`] = `
<input
  className="sc-bczRLJ fAQBvE"
  placeholder="Type here"
/>
`;

exports[`Storyshots  InputField Error 1`] = `
<input
  className="sc-bczRLJ fAQBvE is-invalid"
  placeholder="Type here"
/>
`;

exports[`Storyshots Elements/Button Default 1`] = `
<button
  className="sc-gsnTZi cFnfUp"
>
  Default Button
</button>
`;

exports[`Storyshots Elements/Button Primary 1`] = `
<button
  className="sc-gsnTZi sc-dkzDqf cFnfUp cGQMqD"
>
  Primary Button
</button>
`;
